--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,20 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  image_picker: ^0.8.0+3
+  geolocator: ^7.1.0
+  dio: ^4.0.0
+  shared_preferences: ^2.0.7
+  cached_network_image: ^3.1.0
+  google_maps_flutter: ^2.0.6
+  carousel_pro_nullsafety: ^1.0.2
+  sqflite: ^2.0.0+4
+  video_player: ^2.2.3
+  chewie: ^1.2.2
+  fijkplayer: ^0.10.0
+  fluttertoast: ^8.0.8
+  url_launcher: ^6.0.10
+  flutter_easyloading: ^3.0.3
 
 dev_dependencies:
   flutter_test:
