--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,14 @@ dependencies:
   fluttertoast: ^8.0.8
   url_launcher: ^6.0.10
   flutter_easyloading: ^3.0.3
+  firebase_core: ^1.10.0
+  firebase_auth: ^3.2.0
+  flutter_launcher_icons: ^0.9.2
+  flutter_typeahead: ^3.2.1
+
+flutter_icons:
+  android: true
+  image_path: "images/logo.png"
 
 dev_dependencies:
   flutter_test:
